syntax = "proto3";

package celestia.prover.v1;

option go_package = "provers/client";

service Prover {
  rpc ProveStateTransition(ProveStateTransitionRequest) returns (ProveStateTransitionResponse);
  rpc ProveMembership(ProveMembershipRequest) returns (ProveMembershipResponse);
}

message ProveStateTransitionRequest {
}

message ProveStateTransitionResponse {
  bytes proof = 1;
  bytes public_values = 2;
}

message KeyValuePair {
  bytes key = 1;
  bytes value = 2;
}

message ProveMembershipRequest {
  int64 height = 1;
  repeated string key_paths = 2;
}

message ProveMembershipResponse {
  bytes proof = 1;
  int64 height = 2;
}
